<resources>
    <string name="app_name">CalculationTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Calculation Test</string>
    <string name="start">Start</string>
    <string name="best_score">Best score:%d</string>
    <string name="current_score">Score:%d</string>
    <string name="win_one">You are right! Go on!</string>
    <string name="submit">Submit</string>
    <string name="win">Win!</string>
    <string name="lose">Lose!</string>
    <string name="new_best_score">New Best Score:%d</string>
    <string name="lose_result">Your score:%d</string>
    <string name="Return">Return</string>




</resources>